--- a/website/contact.html
+++ b/website/contact.html
@@ -17,9 +17,8 @@
   </header>
 
   <section class="content">
-    <p>📧 <strong>Email:</strong> jagvi@example.com</p>
-    <p>💼 <strong>LinkedIn:</strong> linkedin.com/in/jagviveluguleti</p>
-    <p>🐙 <strong>GitHub:</strong> github.com/vJagvi</p>
+    <p><strong>Email:</strong> jagvi@example.com</p>
+    <p><strong>LinkedIn:</strong> linkedin.com/in/jagviveluguleti</p>
   </section>
 
   <footer>
